Add: Lawton-Henry: Just Ask

--- a/designforall.html
+++ b/designforall.html
@@ -111,14 +111,22 @@
 
     <h2>Involving Users</h2>
     <ul>
-    <!-- 
-      <li>@@Just Ask!...
+      <li>Lawton-Henry, Shawn:
+        <a href="http://www.uiaccess.com/accessucd/index.html">Just Ask: Integrating Accessibility Throughout Design</a>.
       </li>
-    -->
       <li>Web Accessibility Initiative: 
         <a href="https://www.w3.org/WAI/users/involving">Involving Users in Web Projects for Better, Easier Accessibility</a>.
       </li>
     </ul>
+
+    <!--
+      * Lee Young: "Understanding the key differences between Accessible Design and Inclusive Design", UX Collective, 29.08.2019: https://uxdesign.cc/understanding-the-key-differences-between-accessible-design-and-inclusive-design-25b91cb31a22
+        Rather inaccurate article. Basis "accessible" in "Accessible Design" on the adjective's dictionary meaning (which is actually closer to web site availability) and overstates its goal: "Everybody should be able to use it."
+        (In reality, there are minorities within minorities that you can't design for.)
+        The claim that "Accessibility is based upon objective, measurable facts, and is concerned only with technical or logistical truths" is also incorrect: you can't measure whether a text alternative is appropriate, and many other WCAG success criteria require judgement calls.
+        The definition of "Inclusive Design" completely ignores the aspect of special needs and replaces it with LGBTQ+ and similar stuff??!!
+        This is not "Inclusive Design" but creating politically correct content.
+    -->
   </main>
 
   <footer>
