Add: leitfaden-barrierefrei.dvbs-online.de

--- a/courses.html
+++ b/courses.html
@@ -349,6 +349,11 @@
 
     <h2>Other Courses</h2>
     <ul>
+      <li><span lang="de">
+        <a href="http://leitfaden-barrierefrei.dvbs-online.de/" hreflang="de">Leitfaden zur Gestaltung barrierefreier Weiterbildungsangebote</a>,
+        <i class="website">Deutscher Verein der Blinden und Sehbehinderten in Studium und Beruf <abbr>e. V.</abbr> (<abbr>DVBS</abbr>)</i></span>.
+        This site hosts courses in German; access requires the creation of an account.
+      </li>
       <li><span lang="es"><abbr title="Universidad Nacional de Educación a Distancia">UNED</abbr> y Fundación <abbr title="Organización Nacional de Ciegos de España">ONCE</abbr>:
         <a href="https://iedra.uned.es/courses/UNED-ONCE/AccTIC/2017/about">Accesibilidad <abbr title="tecnologías de la información y la comunicación">TIC</abbr> en compras públicas</a></span>:
         Spanish course on the procurement of accessible <abbr>ICT</abbr> running from 17 April till 15 October 2017.
