Add: Koopersmith & Miner: Designing accessible color systems

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -220,6 +220,10 @@
         <a href="https://24ways.org/2012/colour-accessibility/">Colour Accessibility</a>,
         <i class="website">24 Way to Impress Your Friends</i>, 04.12.2012.
       </li>
+      <li>Koopersmith, Daryl; Miner, Wilson:
+        <a href="https://stripe.com/de/blog/accessible-color-systems">Designing accessible color systems</a>,
+        <i class="blog">stripe blog</i>, 15.10.2019.
+      </li>
       <li>Eggert, Eric:
         <a href="https://24ways.org/2015/the-accessibility-mindset/">The Accessibility Mindset</a>,
         <i class="website">24 Way to Impress Your Friends</i>, 17.12.2015.
