Add: Cravit: How to Use Color Blind Friendly Palettes to Make Your Charts Accessible

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -224,6 +224,10 @@
         <a href="https://stripe.com/de/blog/accessible-color-systems">Designing accessible color systems</a>,
         <i class="blog">stripe blog</i>, 15.10.2019.
       </li>
+      <li>Cravit, Rachel:
+        <a href="https://venngage.com/blog/color-blind-friendly-palette/">How to Use Color Blind Friendly Palettes to Make Your Charts Accessible</a>,
+        <i class="blog">Venngage blog</i>, 21.08.2019.
+      </li>
       <li>Eggert, Eric:
         <a href="https://24ways.org/2015/the-accessibility-mindset/">The Accessibility Mindset</a>,
         <i class="website">24 Way to Impress Your Friends</i>, 17.12.2015.
