Add: Cullen: The Contrast Triangle

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -522,6 +522,13 @@
         <a href="https://www.filamentgroup.com/lab/a11y-links.html">Accessible Links Re:visited</a>,
         <i class="website">Filament Group</i>, 06.12.2017.
       </li>
+      <li>Cullen, Chip:
+        <a href="https://contrast-triangle.com/">The Contrast Triangle</a>
+        and
+        <a href="https://chipcullen.com/the-contrast-triangle/">The Contrast Triangle (blog post)</a> (11.02.2020).
+        <br />About the three-way constraint that arises from the requirement that links that are not underlined
+        need to provide sufficient contrast both with the background and the surrounding text.
+      </li>
       <li>Watson, Léonie:
         <a href="https://tink.uk/using-the-aria-current-attribute/">Using the <code>aria-current</code> attribute</a>,
         <i class="website">Tink</i>, 14.01.2017.
