Add: Accessibility and phone number formatting

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -589,6 +589,11 @@
         I'm sure the author had the best intentions with sharing this technique, but if I where him, I would take this article down or at least add a warning (not everyone reads the comments).
         People stumbling across this article who follow this advice, will make their website *less* accessible.</q>
       </li>
+      <li>
+        <a href="https://thatdevgirl.com/blog/accessibility-phone-number-formatting">Accessibility and phone number formatting</a>,
+        <i class="blog">That Dev Girl</i>, 02.11.2016.
+        <br />This blog post recommends using an <code>aria-label</code> attribute.
+      </li>
     </ul>
 
     <h3>Navigation Menus and Fly-Out Menus</h3>
