Add: Byrne-Haber: Overlays are not the solution to your accessibility problem

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1520,6 +1520,10 @@
             is available on GitHub. The GitHub repository also contains a
             <a href="https://github.com/karlgroves/overlaysdontwork/blob/master/wishlist.md">wishlist of ideas that other can contribute</a>.
           </li>
+          <li>Byrne-Haber, Sheri:
+            <a href="https://medium.com/@sheribyrnehaber/overlays-are-not-the-solution-to-your-accessibility-problem-c5ffe44bd61f">Overlays are not the solution to your accessibility problem</a>,
+            <i class="blog">Medium</i>, 14.01.2020 (4-minute read).
+          </li>
           <li>Ruh, Debra:
             <a href="https://www.huffingtonpost.com/debra-ruh/should-accessibility-over_b_8900720.html">Should Accessibility Overlay Tools Be Used as a Strategic Part of your Accessibility Efforts</a>,
             <i class="newspaper">Huffington Post</i>, 04.01.2016.
