Add: WAI-ARIA: aria-current (state)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1143,6 +1143,10 @@
         <a href="https://tink.uk/using-the-aria-current-attribute/">Using the <code>aria-current</code> attribute</a>,
         <i class="website">Tink</i>, 14.01.2017.
       </li>
+      <li>
+        <a href="https://www.digitala11y.com/aria-current-state/"><abbr>WAI-ARIA</abbr>: <code>aria-current</code> (State)</a>,
+        <i class="website">Digital A11Y</i>, 29.08.2018.
+      </li>
     </ul>
 
     <h2>Abbreviations and Acronyms</h2>
