Add: Evans: Let’s Focus on Slide-Out Navigation

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -659,6 +659,11 @@
         <i class="website">Gill Andrews</i>, 04.01.2019.
         <!--@@summarise-->
       </li>
+      <li>Evans, Alicia:
+        <a href="https://knowbility.org/blog/2020/accessible-slide-menus/">Let’s Focus on Slide-Out Navigation</a>,
+        <i class="blog">Knowbility Blog</i>, 26.03.2020.
+        <!--@@summarise-->
+      </li>
     </ul>
 
     <h2>Form Accessibility</h2>
