Add: UN: Disability Laws and Acts by Country/Area

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -688,6 +688,11 @@
 
     <h3>Outside the European Union</h3>
     <ul>
+      <li>
+        <a href="https://www.un.org/development/desa/disabilities/disability-laws-and-acts-by-country-area.html">Disability Laws and Acts by Country/Area</a>,
+        <i class="website">United Nations: Disability Laws and Acts by Country/Area</i>.
+        Note that this list covers general anti-discrimination legislation; these laws do not necessarily cover digital accessibility.
+      </li>
       <li>Mulvaney, Erin:
         <a href="http://www.nationallawjournal.com/id=1202797283925/Judge-Wants-DOJs-Views-on-Website-Accessibility-for-Blind-Users">Judge Wants <abbr>DOJ</abbr>'s Views on Website Accessibility for Blind Users</a>,
         <i class="journal">The National Law Journal</i>, 05.09.2017.
