Add: BOIA: Best Fonts To Use for Website Accessibility; Reddy: ADA  Compliance: How the Wrong Font Size Can Get You Sued

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1316,6 +1316,27 @@
           <li>Correctly use the heading levels.</li>
         </ol>
       </li>
+      <li>
+        <a href="https://www.boia.org/blog/best-fonts-to-use-for-website-accessibility">Best Fonts To Use for Website Accessibility</a>,
+        <i class="website">Bureau of Internet Accessibility (<abbr>BOIA</abbr>)</i>, 20.03.2017.
+        <br />Quote:
+        <q>Designers who are looking to maximize the legibility of their websites should investigate fonts that have been created
+        with readers with dyslexia or visual impairments in mind, such as
+        <a href="http://www.readregular.com/english/regular.html">Read Regular</a>,
+        <a href="http://www.k-type.com/fonts/lexie-readable/">Lexie Readable</a>, and
+        <a href="https://www.fontsquirrel.com/fonts/tiresias-infofont">Tiresias</a>.</q>
+        (Whether everyone wants to read content set in Read Regular or Lexie Readable is doubtful.)
+        Quote:
+        <q>When all else fails, the best option for an accessible website is a popular font with a clean, sans serif aesthetic.
+        Some of the most appropriate fonts in this regard are Arial, Helvetica, Lucida Sans, Tahoma, and Verdana.</q>
+        (Arial and Helvetica have poor legibility, as pointed out by Matej Latin.)
+      </li>
+      <li>Reddy, Michael:
+        <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr>ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
+        <i class="website">Digital Authority Partners</i>, 11.12.2019.
+        <br />(This article does not constitute design advice. For example, it describes the following typefaces as
+        <q><abbr>ADA</abbr>-friendly</q>: Tahoma, Calibri, Helvetica, Arial, Verdana and Times New Roman.)
+      </li>
     </ul>
 
     <h2>Web Design for Dyslexia</h2>
