Add: Veroniiiica: My Eight Favorite Free Fonts for Print Disabilities

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1316,6 +1316,15 @@
           <li>Correctly use the heading levels.</li>
         </ol>
       </li>
+      <li>Veroniiiica:
+        <a href="https://www.perkinselearning.org/technology/blog/my-eight-favorite-free-fonts-print-disabilities">My Eight Favorite Free Fonts for Print Disabilities</a>,
+        <i class="blog">Perkins eLearning blog</i>, 14.08.2018.
+        <br />This blog posts discusses Arial, Helvetica, Bebas Neue (only capitals, can be used for headings),
+        Calibri (high legibility), APHont (specifically designed for low-vision users), Comic Sans
+        (formerly often used as a dyslexia-friendly font),
+        Lavanderia (a cursive font that seems appropriate for people with low vision or dysgraphia)
+        and OpenDyslexic (specifically designed for people with dyslexia).
+      </li>
       <li>
         <a href="https://www.boia.org/blog/best-fonts-to-use-for-website-accessibility">Best Fonts To Use for Website Accessibility</a>,
         <i class="website">Bureau of Internet Accessibility (<abbr>BOIA</abbr>)</i>, 20.03.2017.
