--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -796,6 +796,9 @@
       <a href="https://www.youtube.com/watch?v=79VF-BdQ0Xw"><abbr>IBM</abbr> Accessibility Open Source: AccProbe</a>
       (4 minutes, 27.03.2018).
     </li>
+    <li>
+      <a href="https://cssstats.com/"><abbr>CSS</abbr> Stats</a>.
+    </li>
     <!--
     <li>
       <a href=""></a>
