Add: Directive (EU) 2019/882

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -506,7 +506,7 @@
 
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
     <h3>European Union</h3>
-    <!-- Legislation and policy:
+    <!--Legislation and policy:
       * European Commission: European Accessibility Act: http://ec.europa.eu/social/main.jsp?catId=1202 
       * United Nations: Convention on the Rights of Persons with Disabilities (CRPD): https://www.un.org/development/desa/disabilities/convention-on-the-rights-of-persons-with-disabilities.html
     -->
@@ -575,6 +575,11 @@
         <a href="http://www.euroblind.org/newsletter/2017/july-september/newsletter/online/de/newsletter/eu-update/nr/3338/">Europäisches Barrierefreiheitsgesetz: Abstimmung im Plenum des <abbr>EU</abbr>-Parlaments in erster Lesung</a>,
         <i class="magazine"><abbr>EBU</abbr> Newsletter</i>,  July–September 2017.
         <!--@@PDF-->
+      </li>
+      <li>
+        <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.L_.2019.151.01.0070.01.ENG&toc=OJ:L:2019:151:TOC">Directive (<abbr>EU</abbr>) 2019/882
+        of the European Parliament and of the Council of 17 April 2019 on the accessibility requirements for products and services (Text with <abbr>EEA</abbr> relevance)</a>,
+        <i class="website">EUR-Lex</i>, 07.06.2019.
       </li>
       <li lang="de">Hellbusch, Jan:
         <a href="https://www.hellbusch.de/european-accessibility-act/" hreflang="de"><span lang="en">European Accessibility Act</span>. Ab dem 1. März 2018 wird wieder offiziell darüber verhandelt</a>,
