--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -581,6 +581,10 @@
         of the European Parliament and of the Council of 17 April 2019 on the accessibility requirements for products and services (Text with <abbr>EEA</abbr> relevance)</a>,
         <i class="website">EUR-Lex</i>, 07.06.2019.
       </li>
+      <li><span lang="de">
+        <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Themen/European-Accessibility-Act/european-accessibility-act_node.html" hreflang="de">Der „<span lang="en">European Accessibility Act</span>“</a>,
+        <i class="website">Bundesfachstelle Barrierefreiheit</i></span> (no date).
+      </li>
       <li lang="de">Hellbusch, Jan:
         <a href="https://www.hellbusch.de/european-accessibility-act/" hreflang="de"><span lang="en">European Accessibility Act</span>. Ab dem 1. März 2018 wird wieder offiziell darüber verhandelt</a>,
         28.02.2018.
