Add: Steffen KJ. Zimmermann

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1548,6 +1548,9 @@
         <a href="https://bik-fuer-alle.de/" hreflang="de" lang="de"><abbr>BIK</abbr> für Alle: Barrierefrei informieren und kommunizieren</a>.
         (This project ended in 2018.)
       </li>
+      <li>
+        <a href="https://www.skjz.de/en_GB/"><span lang="de">Steffen KJ. Zimmermann &#8211; Experte für Barrierefreiheit</span> || Accessibility Expert</a>.
+      </li>
     </ul>
 
     <p>Artifial intelligence (<abbr>AI</abbr>) and accessibility:</p>
