Add: Barrierefreiheit • Content Management

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -212,6 +212,10 @@
         under Creative Commons BY-NC-SA license.
         <!-- @@get posters!! -->
       </li>
+      <li><span lang="de">
+        <a href="https://www.cedis.fu-berlin.de/services/systeme/cms/barrierefreiheit/index.html" hreflang="de">Barrierefreiheit • Content Management</a>,
+        <i class="website">Center für Digitale Systeme, Freie Universität Berlin</i></span>.
+      </li>
       <li>Barclays:
         <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Inclusive Design</a>.
       </li>
