Add: Fairchild: legend element

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -315,6 +315,12 @@
         <a href="https://alistapart.com/article/semantics-to-screen-readers/">Semantics to Screen Readers</a>,
         <i class="website">A List Apart</i>, 28.02.2019.
       </li>
+      <li>Fairchild, Michael:
+        <a href="https://a11ysupport.io/tech/html/legend_element">legend element (html)</a>,
+        <i class="website">Accessibility Support</i>, October 2019 (Creative Commons).
+        <br />According to this page, screen reader support for the elements
+        <code>fieldset</code> and <code>legend</code> is still not ideal.
+      </li>
     </ul>
 
     <p>Screen reader detection:</p>
