Add: ARC Toolkit; accessibility-insights-web

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -231,6 +231,15 @@
         </ul>
       </li>
       <li>
+        <a href="https://www.paciellogroup.com/toolkit/"><abbr>ARC</abbr> Toolkit</a>,
+        <i class="website">Paciello Group</i> (no date).
+        <br />Description from the company's website (July 2020):
+        <q><abbr>ARC</abbr> Toolkit is a professional-level accessibility testing tool that gives you
+        the power to quickly and efficiently evaluate screens for accessibility and uncover issues related to the <abbr>WCAG</abbr> 2.1 Level A and AA guidelines.
+        This convenient Chrome extension enables you to easily drill down into code level issues and gain in-depth insight into the accessibility of the screen.
+        It’s a must-have tool to identify and address crucial accessibility issues.</q>
+      </li>
+      <li>
         <a href="https://github.com/trentmwillis/ember-a11y-testing">Ember A11y Testing</a> (available under the <abbr>MIT</abbr> licence)
         <q>is a wrapper around <a href="https://github.com/dequelabs">Deque Labs'</a> 
           <a href="https://github.com/dequelabs/axe-core">axe-core</a> accessibility testing engine. It integrates into your testing environment with a simple <code>a11yAudit()</code> helper.</q>
@@ -648,6 +657,9 @@
             <a href="https://chrome.google.com/webstore/detail/accessibility-insights-fo/pbjjkligggfmakdaogkfomddhfmpjeni">Accessibility Insights for Web</a>
             in the Google Chrome Store.
             (There is no Firefox add-on.)
+          </li>
+          <li>
+            <a href="https://github.com/microsoft/accessibility-insights-web">accessibility-insights-web (GitHub repository)</a>.
           </li>
         </ul>
       </li>
