Add: Goves: What would an ethical overlay look like?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1666,6 +1666,10 @@
             The blog and the YouTube channel have not been updated since 2009.
             </p>
           </li>
+          <li>Groves, Karl:
+            <a href="https://blog.tenon.io/what-would-an-ethical-overlay-look-like">What would an ethical overlay look like?</a>,
+            <i class="blog">Tenon blog</i>, 10.07.2020.
+          </li>
           <li>
             <a href="https://www.atbar.org/"><abbr>AT</abbr>bar</a>.
             This open-source tool, developed at the University of Southampton in the <abbr>UK</abbr>,
