Add: A Guide to Understanding What Makes a Typeface Accessible

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1364,6 +1364,28 @@
           Some of the most appropriate fonts in this regard are Arial, Helvetica, Lucida Sans, Tahoma, and Verdana.</q>
           (Arial and Helvetica have poor legibility, as pointed out by Matej Latin.)
         </li>
+        <li>The Readability Group and Gareth Ford Williams:
+          <a href="https://uxdesign.cc/a-guide-to-understanding-what-makes-a-typeface-accessible-and-how-to-make-informed-decisions-9e5c0b9040a0?gi=fcdc617942c5">A Guide to Understanding What Makes a Typeface Accessible</a>,
+          <i class="blog"><abbr>UX</abbr> Collective blog</i>, 14.08.2020.
+          <br />The Readability Group created the font faces
+          <a href="https://www.bbc.co.uk/gel/articles/introducing-bbc-reith"><abbr>BBC</abbr> Reith</a>
+          and Qalam based on research that included people with dyslexia and various types of vision impairments.
+          <abbr>BBC</abbr> Reith outperformed Helvetica, Arial, Gill Sans and Tiresias.
+          The articles provides the following guidelines for the choice of font faces:
+          <blockquote>
+            <ol>
+              <li>Use a font style that is appropriate to your audience.</li>
+              <li>Minimise the occurrence of imposter letter shapes that are designed to be very similar to other letter shapes as part of the typeface’s visual style.</li>
+              <li>Minimise the occurrence of mirroring letter shapes.</li>
+              <li>Letters should be easily distinguishable from one another.</li>
+              <li>Humanist typefaces are generally more legible at smaller sizes than grotesque typefaces.</li>
+              <li>Ensure the typeface has adequate letter spacing.</li>
+              <li>There should be a visible difference between capital height and ascenders.</li>
+              <li>Test the suitability of any typeface/font in context.</li>
+            </ol>
+          </blockquote>
+          (The <a href="https://thereadability.group/">Readability Group</a>'s website uses the font face Lustria.)
+        </li>
         <li>Reddy, Michael:
           <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr>ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
           <i class="website">Digital Authority Partners</i>, 11.12.2019.
