Add: Haley: It's About Legibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1386,6 +1386,10 @@
           </blockquote>
           (The <a href="https://thereadability.group/">Readability Group</a>'s website uses the font face Lustria.)
         </li>
+        <li>Haley, Allan:
+          <a href="https://www.fonts.com/content/learning/fontology/level-4/fine-typography/legibility">It’s About Legibility</a>,
+          <i class="website">Fonts.com</i> (no date).
+        </li>
         <li>Reddy, Michael:
           <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr>ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
           <i class="website">Digital Authority Partners</i>, 11.12.2019.
