add: Beier: Typeface Legibility: Towards defining familiarity

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1390,6 +1390,12 @@
           <a href="https://www.fonts.com/content/learning/fontology/level-4/fine-typography/legibility">It’s About Legibility</a>,
           <i class="website">Fonts.com</i> (no date).
         </li>
+        <li>Beier, Sofie:
+          <a href="http://sofiebeier.dk/?page_id=413">Typeface Legibility: Towards defining familiarity</a>,
+          <i class="blog">Sofie Beier</i> (no date).
+          This blog post is about Sofie Beier's <abbr>PhD</abbr> thesis at the Royal College of Art, submitted in 2009.
+          <!--@@download from https://researchonline.rca.ac.uk/957/ -->
+        </li>
         <li>Reddy, Michael:
           <a href="https://www.digitalauthority.me/resources/ada-compliant-font-size/"><abbr>ADA</abbr> Compliance: How the Wrong Font Size Can Get You Sued</a>,
           <i class="website">Digital Authority Partners</i>, 11.12.2019.
