Add: Incobs: WAI-ARIA Techniken

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -374,6 +374,10 @@
         <i class="website">24 Ways</i>, 01.12.2019.
         <!--@@check accessibility-->
       </li>
+      <li><span lang="de">
+        <a href="https://www.incobs.de/wai-aria-techniken.html" hreflang="de"><abbr>WAI</abbr>-<abbr>ARIA</abbr> Techniken</a>,
+        <i class="website">INCOBS</i></span> (no date).
+      </li>
     </ul>
 
     <p>Drag and drop:</p>
