Add: Beveratou and Maag: The effect of type design ...; Garnham: Get to grips with accessible web typography

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1396,6 +1396,14 @@
           This blog post is about Sofie Beier's <abbr>PhD</abbr> thesis at the Royal College of Art, submitted in 2009.
           <!--@@download from https://researchonline.rca.ac.uk/957/ -->
         </li>
+        <li>Beveratou, Eleni; Maag, Dalton:
+          <a href="https://www.researchgate.net/publication/309749121_The_effect_of_type_design_and_typesetting_on_visually_impaired_readers">The effect of type design and typesetting on visually impaired readers</a>,
+          <!--@@add source; download PDF and summarise/abstract-->April 2016 (hosted on ResearchGate)
+        </li>
+        <li>Garnham, Phil:
+          <a href="https://www.creativebloq.com/features/master-accessible-web-typography">Get to grips with accessible web typography</a>,
+          <i class="website">Creative Bloq</i>, 12.10.2017.
+        </li>
         <li>DTALE Design Studio:
           <a href="https://medium.com/productivity-revolution/10-best-fonts-for-improving-reading-experience-6171ce199e97">10 Best fonts for improving reading experience</a>,
           <i class="blog">The Productivity Revolution on Medium</i>, 31.01.2017 (four-minute read).
