Add: einfachsurfen.ch

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1301,6 +1301,11 @@
           <a href="https://www.uni-hildesheim.de/leichtesprache/" hreflang="de" lang="de">Forschungsstelle Leichte Sprache</a>.
           <!--@@M.A. Barrierefreie Kommunikation: https://www.uni-hildesheim.de/leichtesprache/ma-barrierefreie-kommunikation/ -->
         </li>
+        <li><span lang="de">
+          <a href="http://einfachsurfen.ch/" hreflang="de">„Einfach Surfen“ / <span lang="fr">„Facile à surfer“</span></a>,
+          <i class="website">EinfachSurfen.ch</i>:
+          <q>Ein Leitfaden zur Gestaltung von einfachen Internet-Benutzeroberflächen für Menschen mit kognitiven Beeinträchtigungen.</q></span>
+        </li>
       </ul>
     </section>
 
