Add: Gillen: How to Fix 40 Common PDF Accessibility Errors

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -302,7 +302,12 @@
         eGovMon project in Norway.
         <!--@@download-->
       </li>
-      <!-- https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
+      <li>Gillen, Mary:
+        <a href="https://accessiblewebsiteservices.com/how-to-fix-40-pdf-accessibility-errors/">How to Fix 40 Common <abbr>PDF</abbr> Accessibility Errors</a>,
+        <i class="website">&lt;accessible-website-services&gt;</i>, 26.09.2020.
+        (The <abbr>PDF</abbr> file that contains the information costs <abbr>USD</abbr> 25.)
+      </li>
+      <!--https://acrobatusers.com/tutorials/filter/search&category=2&channel=tutorials/ -->
     </ul>
     <!-- https://duckduckgo.com/?q=%22word+2016%22+tagged+pdf+%22how+to%22+accessible&t=ffab&ia=web -->
 
@@ -368,7 +373,7 @@
 
     <h3 id="captioning">Captioning / Subtitles for the Hard of Hearing</h3>
     <p>Tools for captioning or subtitling:</p>
-    <!-- @@definitions / different usage (see also FutureLearn (step 1.11?)) -->
+    <!--@@definitions / different usage (see also FutureLearn (step 1.11?))-->
     <ul>
       <li>Olsson, Nikolaj Lynge (nikse.dk):
         <a href="http://nikse.dk/SubtitleEdit/">Subtitle Edit</a>:
