Add comment on camel casing hashtags on Twitter

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -479,6 +479,9 @@
           <i class="website">Twitter Help Center</i>.
           This explains how to add text descriptions to images you post on Twitter.
         </li>
+        <li>Camel casing hashtags improves accessibility: screen readers announce each word separately.
+          (<a href="https://twitter.com/jma245/status/1308086738196353024">Jennifer Aldrich citing Deborah Edwards-Oñoro on Twitter, 21.09.2020</a>)
+        </li>
       </ul>
 
       <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
