Add explanation of terms captions and subtitles

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -372,8 +372,13 @@
     </ul>
 
     <h3 id="captioning">Captioning / Subtitles for the Hard of Hearing</h3>
-    <p>Tools for captioning or subtitling:</p>
-    <!--@@definitions / different usage (see also FutureLearn (step 1.11?))-->
+    <p>Note that the <abbr>USA</abbr> and the <abbr>UK</abbr> use different terms:
+      the American English term &ldquo;captions&rdquo; corresponds with the British English term
+      &ldquo;subtitles&rdquo; or more accurately &ldquo;subtitles for the deaf and hard of hearing&rdquo;.
+      The links listed below refer to subtitles for the deaf and hard of hearing (<abbr>i.e.</abbr> not translations),
+      though the same technology can often also be used to provide textual translations
+      of foreign-language content in the target audience's native language.
+    </p>
     <ul>
       <li>Olsson, Nikolaj Lynge (nikse.dk):
         <a href="http://nikse.dk/SubtitleEdit/">Subtitle Edit</a>:
