Add: EasyReading.eu

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1333,6 +1333,11 @@
           <i class="website">A List Apart</i>, 23.01.2020.
           <!--@@summarise-->
         </li>
+        <li>
+          <a href="https://www.easyreading.eu/">Easy Reading</a>:
+          This is a <abbr>EU</abbr>-funded project that developed an add-on for Firefox and Chrome
+          to support cognitive accessibility for web content.
+        </li>
       </ul>
       <p>Readability of web content in German:</p>
       <ul>
