--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -456,7 +456,17 @@
         <i class="website">Microsoft Office Support</i>, no date (accessed 05.12.2019).
         <br />This article applies to PowerPoint for Office 365 and PowerPoint for Office 365 for Mac.
       </li>
+      <li>
+        <a href="http://www.synote.com/">Synote</a>
+        is a tool for <q cite="http://www.synote.com/">creating synchronised online and paper notes and transcripts from lecture recordings</q>.
+        According to the
+        <a href="http://synote.com/about/">Synote's &ldquo;About&rdquo; page</a>,
+        <q cite="http://synote.com/about/">[the tool’s] interactive transcript allows viewers to search videos for any word or phrase and replay the video from that point onwards.
+        Screenshots with the corresponding transcript and notes can be printed out with QR codes to replay any part of the recording on any mobile device.
+        Synote can also add interactive quizzes and polls to videos and produce playlists of clips as well as many other features.</q>
+      </li>
     </ul>
+    <p>The above list does not cover tools for adding captions or subtitles using respeaking and voice recognition.</p>
 
     <p>Tutorials and articles:</p>
     <ul>
