Add: Head: Accessible Web Animation

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1690,6 +1690,10 @@
           <a href="https://www.a11ywithlindsey.com/blog/reducing-motion-improve-accessibility">Reducing Motion to Improve Accessibility</a>,
           <i class="blog">a11y with Lindsey</i>, 13.08.2019.
         </li>
+        <li>Head, Val:
+          <a href="https://css-tricks.com/accessible-web-animation-the-wcag-on-animation-explained/">Accessible Web Animation: The <abbr>WCAG</abbr> on Animation Explained</a>,
+          <i class="website"><abbr>CSS</abbr>-Tricks</i>, 22.09.2020.
+        </li>
       </ul>
     </section>
 
