Add: Stopping the bots with Javascript

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1002,6 +1002,11 @@
           <i class="blog">AlastairC</i>, 04.04.2019.
           <br />This blog posts contains examples of white and black text on a white backgroud and points out that the comparative readability of both texts depends on their context.
         </li>
+        <li>
+          <a href="https://www.canaxess.com.au/articles/stopping-bots-with-javascript/">Stopping the bots with Javascript</a>,
+          <i class="website">CANAXESS</i>, 13.09.2020.
+          <!--Referrer: @stommepoes on Twitter, 06.10.2020: https://twitter.com/stommepoes/status/1313386892147265536 -->
+        </li>
       </ul>
     </section>
 
