--- a/courses.html
+++ b/courses.html
@@ -130,6 +130,12 @@
         The course requires an estimated 4 to 5 hours of study per week.
         The first run started on 28.01.2020.
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/create-accessible-interfaces/">Create Accessible Interfaces</a>
+        is a four-week course by <abbr>UAL</abbr> Creative Computing Institute hosted on FutureLearn.
+        It focuses on accessibility needs, <abbr>HTML</abbr>, <abbr>CSS</abbr> and JavaScript and requires 2 hours of study per week.
+        1250 learners registered for the first run of the course, which started at the end of August 2020.
+      </li>
       <li>Sutton, Marcy:
         <a href="https://egghead.io/courses/start-building-accessible-web-applications-today">Start Building Accessible Web Applications Today</a>,
         <i class="website">egghead.io</i>.
