Add: Byrne-Haber: Context is the most critical aspect of alt-text everyone seems to miss

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -425,7 +425,7 @@
       <h3>Text Alternatives</h3>
       <ul>
         <li><a href="https://webaim.org/techniques/alttext/">Alternative Text</a>,
-          <i class="website">Web<abbr>AIM</abbr></i> (regularly updated).
+          <i class="website">Web<abbr>AIM</abbr></i> (regularly updated; also translated into German and French).
         </li>
         <li><a href="https://www.w3.org/WAI/tutorials/images/">Images Tutorial</a>,
           <i class="website">Web Accessibility Initiative (<abbr>WAI</abbr>)</i>.
@@ -434,6 +434,12 @@
         <li>Göransson, Daniel:
           <a href="https://axesslab.com/alt-texts">Alt-texts: The Ultimate Guide</a>,
           <i class="website">Axess Lab</i>, 15.10.2017.
+        </li>
+        <li>Byrne-Haber, Sheri:
+          <a href="https://uxdesign.cc/context-is-the-most-critical-aspect-of-alt-text-everyone-seems-to-miss-e18803a79212">Context is the most critical aspect of alt-text everyone seems to miss</a>,
+          <i class="website"><abbr>UX</abbr> Collective</i>, 01.10.2020.
+          <br />This article points out that context affects whether an image needs a text alternative and what that text alternative should look like.
+          The same image may need a different text alternative depending on the context in which it is used.
         </li>
         <li>Coyier, Chris:
           <a href="https://css-tricks.com/some-things-about-alt-text/">Some Things About `alt` Text</a>,
