Add: Ott: :focus-visible Is Here

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -591,6 +591,10 @@
         <li>Bailey, Eric:
           <a href="https://css-tricks.com/focusing-on-focus-styles/">Focusing on Focus Styles</a>,
           <i class="websites"><abbr>CSS</abbr>-Tricks</i>, 29.03.2018.
+          <br />This article discusses <code>:focus</code>, <code>:focus-within</code>,
+          <code>:focus-visible</code> and why removing focus styles causes problems for certain groups of users.
+          The article contains two videos: one of a person using switch control and
+          one showing why a colour-only state change would be inaccessible to people with deuteranopia.
         </li>
         <li>Smith, Jared:
           <a href="https://webaim.org/blog/plague-of-outline-0/">The plague of outline:0</a>,
@@ -615,6 +619,13 @@
           <i class="website"><abbr>MDN</abbr></i>, 02.07.2018.
           <br />Focus visibility is relevant both to links and to user interface components.
           This article focuses on form elements and custom elements.
+        </li>
+        <li>Ott, Matthias:
+          <a href="https://matthiasott.com/notes/focus-visible-is-here"><code>:focus-visible</code> Is Here</a>,
+          <i class="blog">Matthias Ott</i>, 10.10.2020.
+          <br />This is an introduction to the
+          <a href="https://drafts.csswg.org/selectors-4/#the-focus-visible-pseudo"><code>:focus-visible</code> pseudo-class introduced in <abbr>CSS</abbr> Selectors Level 4</a>.
+          <!--@@recheck CSSWG link once CSS Selectors Level 4 has reached W3C Rec status.-->
         </li>
         <li>Sethfors, Hampus:
           <a href="https://axesslab.com/skip-links/">Your skip links are broken</a>,
