Add summary of Dodson's article

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1228,6 +1228,8 @@
           <i class="website">dev.to</i>, 22.05.2018.
           This article answers the question,
           <q>If I'm building a single page web app, what should happen to <code>focus</code> when the user clicks some navigation?</q>
+          When dynamically adding new content to a page, Dodson recommends including a heading with the attribute
+          <code>tabindex="-1"</code> and directing focus to it. This technique should not be used when a user first arrives at the site.
         </li>
         <li>Lacerda, Filipa:
           <a href="https://alligator.io/vuejs/vue-a11y-autocomplete/">How to Create an Accessible Autocomplete Component with Vue.js</a>,
